[package]
name = "rustbelt"
version = "0.1.0"
authors = ["Björn Guth <scatty@bguth.de>"]
edition = "2018"
license = "GPL-3.0-only"
keywords = ["filetransfer"]
categories = ["command-line-utilities", "filesystem"]
description = "A device to device file transfer program written in Rust"
repository = "https://github.com/scattenlaeufer/rustbelt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[badges]
github = { repository = "scattenlaeufer/rustbelt", workflow = "Rust checks" }
