[package]
name = "rustbelt"
version = "0.1.0"
authors = ["Björn Guth <scatty@bguth.de>"]
edition = "2018"
license = "GPL-3.0-only"
keywords = ["filetransfer"]
categories = ["command-line-utilities", "filesystem"]
description = "A device to device file transfer program written in Rust"
repository = "https://github.com/scattenlaeufer/rustbelt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
ipnetwork = "0.15.1"
pnet = "0.23.0"
qrcode = "0.11.0"
colored = "1.9.0"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }

[badges]
github = { repository = "scattenlaeufer/rustbelt", workflow = "Rust checks" }
